src/jabcode/include/jabcode.h

typedef unsigned char 		jab_byte;
typedef char 				jab_char;
typedef unsigned char 		jab_boolean;
typedef int 				jab_int32;
/**
 * @brief Data structure
*/
typedef struct {
	jab_int32	length;
	jab_char	data[];
}jab_data;
/**
 * @brief Code bitmap
*/
typedef struct {
   jab_int32	width;
   jab_int32	height;
   jab_int32	bits_per_pixel;
   jab_int32	bits_per_channel;
   jab_int32	channel_count;
   jab_byte		pixel[];
}jab_bitmap;
/* WS-6 Option F ABI-compat stub: kept for Panama JAR symbol-lookup compatibility
 * with the panama-poc fork (which uses this for thread-local observation-context
 * cleanup). On swift-java-poc no such context exists, so this is a documented
 * no-op. See docs/jabcode-all-nc-plan/mode0-investigation/09-ws6-option-f-resolution.md */
extern void resetDecoderState(void);
extern jab_boolean saveImage(jab_bitmap* bitmap, jab_char* filename);
extern jab_boolean saveImageCMYK(jab_bitmap* bitmap, jab_boolean isCMYK, jab_char* filename);
extern jab_bitmap* readImage(jab_char* filename);
extern void reportError(jab_char* message);