panama-wrapper/target/generated-sources/jextract/com/jabcode/panama/bindings/jabcode_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * extern jab_data *decodeJABCodeWithObservations(jab_bitmap *bitmap, jab_int32 mode, jab_int32 *status, void *observation_buffer, jab_int32 buffer_capacity, jab_int32 *observation_count)
     * }
     */
    public static MemorySegment decodeJABCodeWithObservations$address() {
        return decodeJABCodeWithObservations.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern jab_data *decodeJABCodeWithObservations(jab_bitmap *bitmap, jab_int32 mode, jab_int32 *status, void *observation_buffer, jab_int32 buffer_capacity, jab_int32 *observation_count)
     * }
     */
    public static MemorySegment decodeJABCodeWithObservations(MemorySegment bitmap, int mode, MemorySegment status, MemorySegment observation_buffer, int buffer_capacity, MemorySegment observation_count) {
        var mh$ = decodeJABCodeWithObservations.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("decodeJABCodeWithObservations", bitmap, mode, status, observation_buffer, buffer_capacity, observation_count);
            }
            return (MemorySegment)mh$.invokeExact(bitmap, mode, status, observation_buffer, buffer_capacity, observation_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class resetDecoderState {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("resetDecoderState");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void resetDecoderState()
     * }
     */
    public static FunctionDescriptor resetDecoderState$descriptor() {
        return resetDecoderState.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void resetDecoderState()
     * }
     */
    public static MethodHandle resetDecoderState$handle() {
        return resetDecoderState.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void resetDecoderState()
     * }
     */
    public static MemorySegment resetDecoderState$address() {
        return resetDecoderState.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void resetDecoderState()
     * }
     */
    public static void resetDecoderState() {
        var mh$ = resetDecoderState.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("resetDecoderState");
            }
            mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class saveImage {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            jabcode_h.C_CHAR,
            jabcode_h.C_POINTER,
            jabcode_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("saveImage");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern jab_boolean saveImage(jab_bitmap *bitmap, jab_char *filename)
     * }
     */
    public static FunctionDescriptor saveImage$descriptor() {
        return saveImage.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern jab_boolean saveImage(jab_bitmap *bitmap, jab_char *filename)
     * }
     */
    public static MethodHandle saveImage$handle() {
        return saveImage.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern jab_boolean saveImage(jab_bitmap *bitmap, jab_char *filename)
     * }
     */
    public static MemorySegment saveImage$address() {
        return saveImage.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern jab_boolean saveImage(jab_bitmap *bitmap, jab_char *filename)
     * }
     */
    public static byte saveImage(MemorySegment bitmap, MemorySegment filename) {
        var mh$ = saveImage.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("saveImage", bitmap, filename);
            }
            return (byte)mh$.invokeExact(bitmap, filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class saveImageCMYK {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            jabcode_h.C_CHAR,
            jabcode_h.C_POINTER,
            jabcode_h.C_CHAR,
            jabcode_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("saveImageCMYK");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern jab_boolean saveImageCMYK(jab_bitmap *bitmap, jab_boolean isCMYK, jab_char *filename)
     * }
     */
    public static FunctionDescriptor saveImageCMYK$descriptor() {
        return saveImageCMYK.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern jab_boolean saveImageCMYK(jab_bitmap *bitmap, jab_boolean isCMYK, jab_char *filename)
     * }
     */
    public static MethodHandle saveImageCMYK$handle() {
        return saveImageCMYK.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern jab_boolean saveImageCMYK(jab_bitmap *bitmap, jab_boolean isCMYK, jab_char *filename)
     * }
     */
    public static MemorySegment saveImageCMYK$address() {
        return saveImageCMYK.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern jab_boolean saveImageCMYK(jab_bitmap *bitmap, jab_boolean isCMYK, jab_char *filename)
     * }
     */
    public static byte saveImageCMYK(MemorySegment bitmap, byte isCMYK, MemorySegment filename) {
        var mh$ = saveImageCMYK.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("saveImageCMYK", bitmap, isCMYK, filename);
            }
            return (byte)mh$.invokeExact(bitmap, isCMYK, filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readImage {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            jabcode_h.C_POINTER,
            jabcode_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("readImage");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern jab_bitmap *readImage(jab_char *filename)
     * }
     */
    public static FunctionDescriptor readImage$descriptor() {
        return readImage.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern jab_bitmap *readImage(jab_char *filename)
     * }
     */
    public static MethodHandle readImage$handle() {
        return readImage.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern jab_bitmap *readImage(jab_char *filename)
     * }
     */
    public static MemorySegment readImage$address() {
        return readImage.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern jab_bitmap *readImage(jab_char *filename)
     * }
     */
    public static MemorySegment readImage(MemorySegment filename) {
        var mh$ = readImage.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readImage", filename);
            }
            return (MemorySegment)mh$.invokeExact(filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class reportError {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            jabcode_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("reportError");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void reportError(jab_char *message)
     * }
     */
    public static FunctionDescriptor reportError$descriptor() {
        return reportError.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void reportError(jab_char *message)
     * }
     */
    public static MethodHandle reportError$handle() {
        return reportError.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void reportError(jab_char *message)
     * }
     */
    public static MemorySegment reportError$address() {
        return reportError.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void reportError(jab_char *message)
     * }
     */
    public static void reportError(MemorySegment message) {
        var mh$ = reportError.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("reportError", message);
            }
            mh$.invokeExact(message);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

